--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "vite",
     "build": "./build.sh",
+    "build:android": "cap sync android && cd android && ./gradlew assembleRelease",
     "start-android": "cap run android",
     "start-ios": "cap run ios",
     "preview": "vite preview",
@@ -17,7 +18,7 @@
     "@capacitor/core": "^7.0.0",
     "@capacitor/ios": "^7.0.0",
     "@capacitor/splash-screen": "^7.0.0",
-    "capacitor-nodejs": "https://github.com/hampoelz/capacitor-nodejs/releases/download/v1.0.0-beta.9/capacitor-nodejs.tgz"
+    "capacitor-nodejs": "https://github.com/mustang-im/Capacitor-NodeJS/releases/download/1.0.0-beta.10/capacitor-nodejs-v1.0.0-beta.10.tgz"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.0.0",
