--- a/mobile/package.json
+++ b/mobile/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "start:android": "cap run android",
+    "start:ios": "cap run ios",
     "build": "./build.sh",
-    "build:android": "cap sync android && cd android && ./gradlew assembleRelease",
-    "start-android": "cap run android",
-    "start-ios": "cap run ios",
+    "build:android:apk": "cap sync android && cd android && ./gradlew assembleRelease",
+    "build:android:aab": "cap sync android && cd android && ./gradlew :app:bundleRelease",
     "preview": "vite preview",
     "setup:ios": "cd ios && ./setup-ios.sh"
   },
