--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,8 +8,8 @@
     "start:android": "cap run android",
     "start:ios": "cap run ios",
     "build": "./build.sh",
-    "build:android:apk": "cap sync android && cd android && ./gradlew assembleRelease",
-    "build:android:aab": "cap sync android && cd android && ./gradlew :app:bundleRelease",
+    "build:android:apk": "cap sync android && cd android && ./gradlew --configuration-cache assembleRelease",
+    "build:android:aab": "cap sync android && cd android && ./gradlew --configuration-cache :app:bundleRelease",
     "preview": "vite preview",
     "setup:ios": "cd ios && ./setup-ios.sh"
   },
