--- a/lib/package.json
+++ b/lib/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "description": "Mustang - User-friendly full-featured email application for everybody - Logic",
   "dependencies": {
+    "bufferutil": "^4.0.9",
     "html-to-text": "^5.1.1",
     "i18n": "^0.8.3",
     "iocane": "^1.0.2",
