--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -52,12 +52,22 @@ jobs:
       - run: cd mobile/backend; yarn install
       - run: cd mobile; yarn build:ios:release
 
+      - name: Find IPA file and set path
+        run: |
+          IPA_FILE=$(find mobile/output -name "*.ipa" -type f | head -1)
+          if [ -z "$IPA_FILE" ]; then
+            echo "Error: No IPA file found in mobile/output/"
+            exit 1
+          fi
+          echo "Found IPA file: $IPA_FILE"
+          echo "IPA_FILE_PATH=$IPA_FILE" >> $GITHUB_ENV
+          echo "IPA_FILENAME=$(basename "$IPA_FILE")" >> $GITHUB_ENV
+
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
-          name: mustang.ipa
-          path: |
-            mobile/output/**.ipa
+          name: ${{ env.IPA_FILENAME }}
+          path: ${{ env.IPA_FILE_PATH }}
 
       - name: Set version from package.json
         run: |
@@ -69,13 +79,12 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.APP_VERSION }}
-          files: |
-            mobile/output/**.ipa
+          files: ${{ env.IPA_FILE_PATH }}
 
       - name: Upload app to TestFlight
         uses: apple-actions/upload-testflight-build@v3
         with:
-          app-path: mobile/output/**.ipa
+          app-path: ${{ env.IPA_FILE_PATH }}
           issuer-id: ${{ secrets.IOS_APPSTORE_API_ISSUER }}
           api-key-id: ${{ secrets.IOS_APPSTORE_API_KEY_ID }}
           api-private-key: ${{ secrets.IOS_APPSTORE_API_KEY }}
