--- a/mobile/ios/App/App/Info.plist
+++ b/mobile/ios/App/App/Info.plist
@@ -33,8 +33,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>The camera allows users to take a photo for their avatar.</string>
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>The app frontend needs to communicate with a local backend via WebSocket for mail synchronization, storage and other tasks. We want the app to run entirely local without any cloud service, that&apos;s why the service runs locally on the device.</string>
+	<string>The app frontend needs to communicate with a local backend via WebSocket for mail synchronization, storage and other tasks. We want the app to run entirely local without any cloud service, that's why the service runs locally on the device.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>The photo library (add only) is used to save photos taken by users for their avatar.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>The photo library is used for the user to pick a photo as their avatar.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
