--- a/e2/package.json
+++ b/e2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mustang",
-  "version": "0.9.5-dev",
+  "version": "0.9.7",
   "description": "Mustang - Video conference, chat, mail, calendar, files, contacts",
   "main": "./out/main/index.js",
   "type": "module",
