Make conditional easier to read

--- a/.github/workflows/installer-ios-parula.yml
+++ b/.github/workflows/installer-ios-parula.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           tag_name: ${{ env.APP_VERSION }}
           make_latest: ${{ env.RELEASE }}
-          prerelease: ${{ env.RELEASE != 'true' }}
+          prerelease: ${{ env.RELEASE == 'false' }}
           files: ${{ env.IPA_FILE_PATH }}
 
       - name: Upload app to TestFlight
