--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -79,7 +79,7 @@ jobs:
       with:
         tag_name: ${{ env.APP_VERSION }}
         make_latest: ${{ env.RELEASE }}
-        prerelease: ${{ env.RELEASE != 'true' }}
+        prerelease: ${{ env.RELEASE == 'false' }}
         files: |
           mobile/android/app/build/outputs/apk/release/*.apk
           mobile/android/app/build/outputs/bundle/release/*.aab
