--- a/mobile/ios/App/App/Info.plist
+++ b/mobile/ios/App/App/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>The camera allows users to take a photo for their avatar.</string>
+	<string>Your camera is needed for video conferences and optionally allows you to make your avatar.</string>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This is required for the app to work. The user interface of the app needs to communicate with a local backend part via WebSocket for mail synchronization, storage and other tasks. We want the app to run entirely locally on your device, without any cloud service, that's why the service runs locally on the device.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
