--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -20,3 +20,6 @@ org.gradle.jvmargs=-Xmx1536m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
