--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -3,6 +3,9 @@ import com.android.build.gradle.internal.tasks.FinalizeBundleTask
 apply plugin: 'com.android.application'
 
 android {
+    kotlinOptions {
+        jvmTarget = '21'
+    }
     namespace "im.mustang.capa"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
@@ -77,6 +80,7 @@ dependencies {
 }
 
 apply from: 'capacitor.build.gradle'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 try {
     def servicesJSON = file('google-services.json')
