--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     
+    ext {
+        kotlin_version = '2.2.0'
+    }
     repositories {
         google()
         mavenCentral()
@@ -9,6 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.13.2'
         classpath 'com.google.gms:google-services:4.4.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
