--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -25,8 +25,12 @@ android {
         }
         externalNativeBuild {
             cmake {
-                cppFlags ''
+                cppFlags ""
+                arguments "-DANDROID_STL=c++_shared"
             }
+        }
+        ndk {
+            abiFilters "arm64-v8a"
         }
     }
     signingConfigs {
