--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.0'
 }
 
 apply from: 'capacitor.build.gradle'
