--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -35,7 +35,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    def appName = "mustang"
+    def appName = "Mustang"
     def version = android.defaultConfig.versionName
 
     applicationVariants.all { variant ->
