--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 }
 
 apply from: 'capacitor.build.gradle'
