--- a/app/package.json
+++ b/app/package.json
@@ -8,14 +8,10 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
     "l10n:extract": "npx tsx l10n/extractor/extractor.ts",
     "l10n:placeholder": "npx mustang-autotranslate --input l10n/locales --service dry-run --delete-unused-strings --type key-based --exclude **/*.template.json",
     "l10n:auto-translate": "npx mustang-autotranslate --input l10n/locales --service deepl-free --config $DEEPL_API_KEY,default,1000 --delete-unused-strings --type key-based --template messages.template.json --decode-escapes=dynamic",
-    "l10n:crowdin": "cd l10n && crowdin",
-    "l10n:sync": "cd l10n && crowdin push && crowdin pull",
-    "l10n:sync:sources": "cd l10n && crowdin push",
-    "l10n:sync:translations": "cd l10n && crowdin pull"
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
     "@capacitor/app": "^7.0.2",
@@ -73,7 +69,6 @@
   },
   "devDependencies": {
     "@composi/gestures": "^1.0.9",
-    "@crowdin/cli": "^4.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^3.0.0",
     "@typescript-eslint/typescript-estree": "^8.25.0",
