--- a/.github/workflows/installer-linuxarm.yml
+++ b/.github/workflows/installer-linuxarm.yml
@@ -13,6 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install FPM
+      # Work around <https://github.com/electron-userland/electron-builder/issues/9563>
+      run: |
+        sudo apt-get update
+        sudo apt-get install ruby ruby-dev build-essential
+        sudo gem install --no-document fpm
+
     - name: Build installers for Linux ARM
       uses: actions/setup-node@v3
       with:
@@ -30,7 +38,8 @@ jobs:
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         # For Sentry source maps. Otherwise, vite build is out of memory
         NODE_OPTIONS: '--max-old-space-size=32768'
-    - name: Upload
+        # Work around <https://github.com/electron-userland/electron-builder/issues/9563>
+        USE_SYSTEM_FPM: true
       uses: actions/upload-artifact@v4
       with:
         name: Installers Linux ARM
