--- a/.github/workflows/installer-linuxarm.yml
+++ b/.github/workflows/installer-linuxarm.yml
@@ -40,6 +40,8 @@ jobs:
         NODE_OPTIONS: '--max-old-space-size=32768'
         # Work around <https://github.com/electron-userland/electron-builder/issues/9563>
         USE_SYSTEM_FPM: true
+
+    - name: Upload
       uses: actions/upload-artifact@v4
       with:
         name: Installers Linux ARM
