--- a/.github/workflows/installer-windowsarm.yml
+++ b/.github/workflows/installer-windowsarm.yml
@@ -13,6 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install Python distutils
+      run: |
+        python -m pip install setuptools
+        python -m pip install distutils
+
     - name: Build installers for Windows ARM
       uses: actions/setup-node@v3
       with:
