--- a/.github/workflows/installer-windowsarm.yml
+++ b/.github/workflows/installer-windowsarm.yml
@@ -15,9 +15,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Python distutils
-      run: |
-        python -m pip install setuptools
-        python -m pip install distutils
+      run: python -m pip install setuptools
 
     - name: Build installers for Windows ARM
       uses: actions/setup-node@v3
