--- a/.github/workflows/installer-windowsarm-parula.yml
+++ b/.github/workflows/installer-windowsarm-parula.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install Python distutils
+      run: python -m pip install setuptools
+
     - name: Build installers for Windows ARM
       uses: actions/setup-node@v3
       with:
