--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,11 @@
   "description": "Mustang Backend",
   "main": "./backend.ts",
   "dependencies": {
+    "@radically-straightforward/sqlite": "^1.1.13",
+    "@types/nodemailer": "^7.0.4",
+    "adm-zip": "^0.5.16",
+    "bufferutil": "^4.1.0",
+    "des.js": "^1.1.0",
     "@radically-straightforward/sqlite": "^1.0.0",
     "@types/nodemailer": "^6.4.14",
     "adm-zip": "^0.5.12",
@@ -11,18 +16,18 @@
     "bufferutil": "^4.0.8",
     "des.js": "^1.0.1",
     "electron-updater": "^6.6.2",
-    "express": "^4.19.2",
+    "express": "^5.2.1",
     "imapflow": "https://github.com/mustang-im/imapflow/",
     "js-md4": "^0.3.2",
-    "ky": "^1.2.3",
-    "nodemailer": "^6.9.13",
-    "tsdav": "^2.1.4",
-    "utf-8-validate": "^6.0.3",
-    "ws": "^8.16.0"
+    "ky": "^1.14.2",
+    "nodemailer": "^7.0.12",
+    "tsdav": "^2.1.6",
+    "utf-8-validate": "^6.0.6",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "electron": "^30.0.2",
-    "i18n": "^0.8.3"
+    "i18n": "^0.15.3"
   },
   "author": "Ben Bucksch and  Mustang GmbH (https://mustang.im)",
   "copyright": "Ben Bucksch",
